edit and delete posts

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,7 +35,7 @@ a {
   left: 0;
   top: 0;
   height: 100%;
-  background: #3399CC;
+  background: #88D0AD;
   padding: 7em 0 0 0;
   border-right: 1px solid #b8e2fe;
 
@@ -103,7 +103,7 @@ a {
   #header {
     padding: 1.2em 3.5em;
     border-bottom: 1px solid #b8e2fe;
-    background: #666666;
+    background: #529FCD;
     color: #FFF;
     p {
       display: inline;
