--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,4 +12,10 @@
   <p class="body">
     <%= @post.body %>
   </p>
+  <div id="comments">
+    <h2><%= @post.comments.count %> Comments</h2>
+    <%= render @post.comments %>
+    <h3>Join the Discussion: </h3>
+    <%= render "comments/form" %>
+  </div>
 </div>
